[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/Themes/Default/default.tres" type="Theme" id=1]
[ext_resource path="res://scenes/title/options/OptionContainer.gd" type="Script" id=2]
[ext_resource path="res://sprites/corncob.png" type="Texture" id=3]

[node name="OptionContainer" type="HBoxContainer"]
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
value_label_nodepath = NodePath("ValueLabel")

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="OptionLabel" type="Label" parent="."]
margin_left = 36.0
margin_top = 2.0
margin_right = 186.0
margin_bottom = 37.0
rect_min_size = Vector2( 150, 35 )
text = "OPTION NAME
"
uppercase = true

[node name="OptionSlider" type="HSlider" parent="."]
margin_left = 190.0
margin_right = 590.0
margin_bottom = 20.0
rect_min_size = Vector2( 400, 20 )
max_value = 10.0
value = 10.0

[node name="ValueLabel" type="Label" parent="."]
margin_left = 594.0
margin_top = 5.0
margin_right = 634.0
margin_bottom = 35.0
rect_min_size = Vector2( 40, 30 )
text = "10"
align = 1

[connection signal="focus_entered" from="OptionSlider" to="." method="_on_OptionSlider_focus_entered"]
[connection signal="focus_exited" from="OptionSlider" to="." method="_on_OptionSlider_focus_exited"]
[connection signal="value_changed" from="OptionSlider" to="." method="_on_OptionSlider_value_changed"]
